maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:5: error: ';' expected but ',' found.
    if (estFaceMur()) {droite(),return true}
                               ^